--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,20 @@ server.port=8081
 # Database
 
 spring.datasource.driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=test;
+spring.datasource.jdbc-url = jdbc:sqlserver://localhost:1433;databaseName=test;
 spring.datasource.username = root
 spring.datasource.password = root
+
+#mysql.datasource.url = jdbc:mysql://localhost:3306/springbootdb
+mysql.datasource.jdbc-url = jdbc:mysql://localhost:3306/springbootdb
+mysql.datasource.username = root
+mysql.datasource.password = root
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
+#spring.jpa.database=default
 
 
 spring.banner.location=banner.txt
