--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,27 @@ logging.level.org.springframework.web=DEBUG
 server.error.include-message=always
 server.port=8081
 # Database
+sqlserver-db:
+  driver: com.microsoft.sqlserver.jdbc.SQLServerDriver
+  url: jdbc:sqlserver://localhost:1433;databaseName=test
+  username: root
+  password: root
 
-spring.datasource.driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.jdbc-url = jdbc:sqlserver://localhost:1433;databaseName=test;
-spring.datasource.username = root
-spring.datasource.password = root
+#spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver;
+#spring.datasource.hikari.jdbc-url = jdbc:sqlserver://localhost:1433;databaseName=test;
+#spring.datasource.username = root
+#spring.datasource.password = root
 
 #mysql.datasource.url = jdbc:mysql://localhost:3306/springbootdb
-mysql.datasource.jdbc-url = jdbc:mysql://localhost:3306/springbootdb
-mysql.datasource.username = root
-mysql.datasource.password = root
+#mysql.datasource.url = jdbc:mysql://localhost:3306/springbootdb
+#mysql.datasource.username = root
+#mysql.datasource.password = root
 
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.show-sql = true
+##spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
-#spring.jpa.database=default
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
+##spring.jpa.database=default
 
 
 spring.banner.location=banner.txt
